--- a/README.Rmd
+++ b/README.Rmd
@@ -30,36 +30,106 @@ library("discgolf")
 
 The Discourse API is based on using a specific installation of Discourse, which requires your username and an API key for that installation. Get those, and you can pass them in to each function call, or set as option variables in `.Rprofile` (use `discourse_api_key` and `discourse_username`) or environment variables in `.Renviron` (use `DISCOURSE_API_KEY` and `DISCOURSE_USERNAME`).
 
-## Functions
-
-Get latest topics
+## Get latest topics
 
 ```{r eval=FALSE}
-latest_topics()
+topics_latest()
 ```
 
-```{r echo=FALSE}
-latest_topics()$topic_list$topics[,c(1:5)]
+```{r eval=FALSE}
+topics_latest()$topic_list$topics[,c(1:5)]
 ```
 
-Get new topics
+## Get new topics
 
-```{r}
-new_topics()
+```{r eval=FALSE}
+topics_new()
 ```
 
-Get topics by a specific user
+## Get topics by a specific user
 
-```{r}
+```{r eval=FALSE}
 topics_by("cboettig")
 ```
 
-Get a single topic by id number
+## Get a single topic by id number
 
 ```{r eval=FALSE}
 topic(8)
 ```
 
-```{r echo=FALSE}
+```{r eval=FALSE}
 topic(8)$post_stream$posts[,c(1:5)]
+```
+
+## Get a post
+
+```{r eval=FALSE}
+post_get(90)
+```
+
+## create post, create topic first
+
+```{r eval=FALSE}
+topic_create("The problem with blue skies", text = "just saying and all that")
+post_create(topic_id = 13, text = "There isn't a problem!")
+```
+
+## Wikify a post
+
+```{r eval=FALSE}
+post_wikify(x$post_stream$posts$id[4])
+```
+
+## Search
+
+```{r eval=FALSE}
+dg_search(query = "poo")
+dg_search(posts_count = 1)
+dg_search(in_ = "posted")
+dg_search(status = "open")
+```
+
+## list a user
+
+```{r eval=FALSE}
+user('sckott')
+user('cboettig')
+```
+
+## list users
+
+```{r eval=FALSE}
+users_list('staff')
+users_list('new')
+```
+
+## create a user
+
+```{r eval=FALSE}
+(x <- user_create("jane doe", "jane@doe.com", "jane_doe", "afafasfdasdf"))
+```
+
+## activate a user
+
+```{r eval=FALSE}
+user_activate(x$user_id)
+```
+
+## upate email address
+
+```{r eval=FALSE}
+user_update_email('jane_doe', 'jane2@doe.com')
+```
+
+## upate user name
+
+```{r eval=FALSE}
+user_update_username('jane_doe', 'jane_doe2')
+```
+
+## delete a user
+
+```{r eval=FALSE}
+user_delete(x$user_id)
 ```
