--- a/README.Rmd
+++ b/README.Rmd
@@ -16,9 +16,9 @@ knitr::opts_chunk$set(
 [![rstudio mirror downloads](http://cranlogs.r-pkg.org/badges/discgolf?color=FAB657)](https://github.com/metacran/cranlogs.app)
 [![cran version](http://www.r-pkg.org/badges/version/discgolf)](https://cran.r-project.org/package=discgolf)
 
-`discgolf` is an R client for the Discourse API, based off the Ruby gem [discourse_api](https://github.com/discourse/discourse_api)
+`discgolf` is an R client for the Discourse API, inspired by the Ruby gem [discourse_api](https://github.com/discourse/discourse_api)
 
-Discourse API docs: <http://docs.discourse.org>
+Discourse API docs: <https://docs.discourse.org>
 
 ## Installation
 
@@ -31,8 +31,8 @@ install.packages("discgolf")
 Development version
 
 ```{r eval=FALSE}
-install.packages("devtools")
-devtools::install_github("sckott/discgolf")
+install.packages("remotes")
+remotes::install_github("sckott/discgolf")
 ```
 
 ```{r}
