--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,11 @@
-discgolf
-========
+---
+output: github_document
+---
+
+<!-- README.md is generated from README.Rmd. Please edit that file -->
+
+# discgolf
+
 
 ```{r echo=FALSE}
 knitr::opts_chunk$set(
@@ -43,7 +49,7 @@ library("discgolf")
 
 ## Authentication
 
-The Discourse API is based on using a specific installation of Discourse, which requires your username and an API key for that installation. Get those, set as option variables in `.Rprofile` (use `discourse_api_key` and `discourse_username`) or environment variables in `.Renviron` (use `DISCOURSE_API_KEY` and `DISCOURSE_USERNAME`) or similar file (`.bashrc`, `.zshrc`, etc.).
+The Discourse API is based on using a specific installation of Discourse, which requires the URL of the target Discourse forum, your username and an API key for that installation. Get those, set as option variables in `.Rprofile` (use `discourse_url`, `discourse_username` and `discourse_api_key`) or environment variables in `.Renviron` (use `DISCOURSE_URL`, `DISCOURSE_USERNAME` and `DISCOURSE_API_KEY`) or similar file (`.bashrc`, `.zshrc`, etc.).
 
 ## Get latest topics
 
@@ -83,7 +89,7 @@ topic(8)$post_stream$posts[,c(1:5)]
 post_get(90)
 ```
 
-## create post, create topic first
+## Create post, create topic first
 
 ```{r eval=FALSE}
 topic_create("The problem with blue skies", text = "just saying and all that")
@@ -105,45 +111,45 @@ dg_search(in_ = "posted")
 dg_search(status = "open")
 ```
 
-## list a user
+## List a user
 
 ```{r eval=FALSE}
 user('sckott')
 user('cboettig')
 ```
 
-## list users
+## List users
 
 ```{r eval=FALSE}
 users_list('staff')
 users_list('new')
 ```
 
-## create a user
+## Create a user
 
 ```{r eval=FALSE}
 (x <- user_create("jane doe", "jane@doe.com", "jane_doe", "afafasfdasdf"))
 ```
 
-## activate a user
+## Activate a user
 
 ```{r eval=FALSE}
 user_activate(x$user_id)
 ```
 
-## upate email address
+## Update email address
 
 ```{r eval=FALSE}
 user_update_email('jane_doe', 'jane2@doe.com')
 ```
 
-## upate user name
+## Update user name
 
 ```{r eval=FALSE}
 user_update_username('jane_doe', 'jane_doe2')
 ```
 
-## delete a user
+## Delete a user
 
 ```{r eval=FALSE}
 user_delete(x$user_id)
